--- a/2012-09-03-locale.md
+++ b/2012-09-03-locale.md
@@ -128,6 +128,7 @@ and the pre-Euro [Deutsche Mark](https://en.wikipedia.org/wiki/Deutsche_Mark) cu
 Support for identifiers specifying other than language or region is inconsistent
 across system APIs and different platforms,
 so you shouldn't rely on specific behavior.
+
 {% endwarning %}
 
 Users can change their locale settings
@@ -143,12 +144,18 @@ being passed into a property here and a method there.
 But if you give it a chance,
 it can tell you more about a place than you ever knew there was to know:
 
-- Language and Script (`languageCode`, `scriptCode`, `exemplarCharacterSet`)
-- Region (`regionCode`)
-- Collation (`collationIdentifier`, `collatorIdentifier`)
-- Calendar (`calendar`)
-- Currency (`currencyCode`, `currencySymbol`)
-- Numbers and Units (`decimalSeparator`, `usesMetricSystem`)
+- Language and Script 
+  (`languageCode`, `scriptCode`, `exemplarCharacterSet`)
+- Region 
+  (`regionCode`)
+- Collation 
+  (`collationIdentifier`, `collatorIdentifier`)
+- Calendar 
+  (`calendar`)
+- Currency 
+  (`currencyCode`, `currencySymbol`)
+- Numbers and Units 
+  (`decimalSeparator`, `usesMetricSystem`)
 - Quotation Delimiters
   (`quotationBeginDelimiter` / `quotationEndDelimiter`,
   `alternateQuotationBeginDelimiter` / `alternateQuotationEndDelimiter`)
@@ -200,11 +207,13 @@ which shows language endonyms alongside exonyms:
 {% asset locale-languages.png %}
 
 {% info %}
+
 Behind the scenes,
 all of this locale information is provided by the
 [Common Locale Data Repository](http://cldr.unicode.org)
 <abbr title="Common Locale Data Repository">CLDR</abbr>,
 a companion project to the Unicode standard.
+
 {% endinfo %}
 
 ## _Vox Populi_
