--- a/2019-12-16-direct.md
+++ b/2019-12-16-direct.md
@@ -12,11 +12,13 @@ excerpt: >-
 ---
 
 It's hard to get excited when new features come to Objective-C.
+
 These days,
 any such improvements are in service of Swift interoperability
 rather than an investment in the language itself
 _(see [nullability](https://developer.apple.com/swift/blog/?id=25)
 and [lightweight generics](https://developer.apple.com/documentation/swift/imported_c_and_objective-c_apis/using_imported_lightweight_generics_in_swift))_.
+
 So it was surprising to learn about
 [this recently merged patch to Clang](https://reviews.llvm.org/D69991),
 which adds a new direct dispatch mechanism to Objective-C methods.
@@ -26,7 +28,6 @@ the most we have to go on is an Apple-internal [Radar number](/bug-reporting/)
 ([`2684889`](rdar://2684889)),
 which doesn't tell us much beyond its relative age
 (sometime in the early '00s, by our estimation).
-
 Fortunately,
 [the feature landed](https://github.com/llvm/llvm-project/commit/d4e1ba3fa9dfec2613bdcc7db0b58dea490c56b1)
 with enough documentation and test coverage
@@ -158,9 +159,8 @@ It's absolutely wild what you can do.
 
 </aside>
 
-If you have a hot path in your code ---
-a method that's called frequently,
-accounting for a significant portion of execution time ---
+If you have a hot path in your code,
+an expensive method that's called frequently,
 you could imagine some benefit to avoiding all of this indirection.
 To that end,
 some developers have used C functions as a way around dynamic dispatch.
