--- a/2019-12-16-direct.md
+++ b/2019-12-16-direct.md
@@ -145,10 +145,6 @@ the object consults the dispatch table of its superclass.
 This continues up the inheritance chain until a match is found
 or the root class (`NSObject`) deems the selector to be unrecognized.
 
-If all of this indirection sounds like a lot of work,
-in a way,
-you'd be right!
-
 <aside class="parenthetical">
 
 And that's to say nothing of how Objective-C lets you do things like
@@ -157,6 +153,10 @@ dynamically at runtime.
 It's absolutely wild what you can do.
 
 </aside>
+
+If you think all of this indirection sounds like a lot of work...
+in a way,
+you'd be right!
 
 If you have a hot path in your code,
 an expensive method that's called frequently,
