Update analysis based on feedback from @smileyborg

--- a/2019-12-16-direct.md
+++ b/2019-12-16-direct.md
@@ -362,14 +362,12 @@ It won't even show up in the Objective-C runtime.
 
 Hidden visibility has two direct advantages:
 
-- Smaller compiled binary size
+- Smaller binary size
 - No external invocation
 
 Without external visibility
 or a way to invoke them dynamically from the Objective-C runtime,
 direct methods are effectively private methods.
-That means no more [swizzling](/method-swizzling/),
-and no more private API usage.
 
 {% info %}
 
@@ -385,6 +383,17 @@ static inline void performDirectMethod(MyClass *__unsafe_unretained object) {
 
 {% endinfo %}
 
+While hidden visibility can be used by Apple
+to prevent swizzling and private API use,
+that doesn't seem to be the primary motivation.
+
+[According to Pierre](https://twitter.com/pedantcoder/status/1197269246289444864),
+who implemented this feature,
+the main benefit of this optimization is code size reduction.
+Reportedly,
+the weight of unused Objective-C metadata
+can account for 5 – 10% of the `__text` section in the compiled binary.
+
 ---
 
 You could imagine that,
@@ -392,7 +401,7 @@ from now until next year's developer conference,
 a few engineers could go through each of the SDK frameworks,
 annotating private methods with `objc_direct`
 and private classes with `objc_direct_members`
-as a lightweight, progressive way to tighten up private APIs.
+as a lightweight way to progressively tighten its SDK.
 
 If that's true,
 then perhaps it's just as well that we've become skeptical of new Objective-C features.
