--- a/2019-12-16-direct.md
+++ b/2019-12-16-direct.md
@@ -340,11 +340,12 @@ stems from something other than performance.
 
 {% info %}
 
-Mike Ash is the Internet's foremost expert on `objc_msgSend`.
+[Mike Ash](https://www.mikeash.com)
+is the Internet's foremost expert on `objc_msgSend`.
 Over the years,
 his posts have provided the deepest and most complete understanding
 to the Objective-C runtime you'll find outside of Cupertino.
-For the curious
+For the curious,
 ["Dissecting objc_msgSend on ARM64"](https://www.mikeash.com/pyblog/friday-qa-2017-06-30-dissecting-objc_msgsend-on-arm64.html)
 is a great place to start.
 
