Add alt attributes to asset tags

--- a/2012-09-03-locale.md
+++ b/2012-09-03-locale.md
@@ -204,7 +204,7 @@ Use this technique whenever you're displaying locale,
 like in this screen from the Settings app,
 which shows language endonyms alongside exonyms:
 
-{% asset locale-languages.png %}
+{% asset locale-languages.png alt="Locale Languages Menu on iOS" %}
 
 {% info %}
 
