--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -103,7 +103,7 @@ Not only do these sections make for easier reading in the code itself,
 but they also create visual cues to 
 the Xcode source navigator and minimap.
 
-{% asset pragma-xcode-sections.png title="#pragma headings in the Xcode source navigator"%}
+{% asset pragma-xcode-sections.png alt="#pragma headings in the Xcode source navigator"%}
 
 {% info %}
 
