caller site -> call site

--- a/2018-07-30-never.md
+++ b/2018-07-30-never.md
@@ -44,7 +44,7 @@ functions that stop execution, like
 `abort()`, and
 `exit(_:)`,
 were annotated with the `@noreturn` attribute,
-which told the compiler that there was no return to the caller site.
+which told the compiler that there was no return to the call site.
 
 ```swift
 // Swift < 3.0
