Add default to captured liquid tag

--- a/2019-09-23-ios-13.md
+++ b/2019-09-23-ios-13.md
@@ -90,7 +90,7 @@ here's what you would see if you did "View Source" for this very webpage:
 {% assign description = page.excerpt | strip_html | strip %}
 
 ```html
-<meta property="og:site_name" content="{{ site.title }}" />
+<meta property="og:site_name" content="{{ site.title | default: 'NSHipster' }}" />
 <meta property="og:image" content="{{ '/logo.png' | absolute_url }}" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="{{ page.title }}" />
