Update Bool article

--- a/2013-04-08-bool.md
+++ b/2013-04-08-bool.md
@@ -3,28 +3,67 @@ title: BOOL / bool / Boolean / NSCFBoolean
 author: Mattt
 category: Objective-C
 tags: nshipster, popular
-excerpt: "Once again, encoding our logical universe into the cold, calculating bytecode of computers forces us to deal with these questions one way or another. And as you'll see from our discussion of boolean types in Objective-C and its kin, truth is indeed stranger than fiction."
+excerpt: >-
+  Encoding our logical universe into the cold, calculating bytecode of computers 
+  forces us to deal with these questions one way or another. 
+  And as you'll see from our discussion of Boolean types in Objective-C, 
+  truth is indeed stranger than fiction.
 status:
   swift: n/a
 ---
 
-We've talked before about the [philosophical and technical concerns of nothingness in programming](https://nshipster.com/nil/). This week, our attention turns to another fundamental matter: Truth.
+Truth.
+<em lang="la">Vēritās</em>.
+The entire charter of Philosophy is founded upon the pursuit of it,
+and yet its exact meaning and implications still elude us.
+Does truth exist independently or is it defined contingently against falsity?
+Can a proposition be at once both true _and_ false? Is there absolute truth in anything, or is everything relative?
 
-Truth. _Vēritās_. The entire charter of Philosophy is founded upon the pursuit of it, and yet its exact meaning and implications still elude us. Does truth exist independently, or is it defined contingently against falsity? Can a proposition be at once both true _and_ false? Is there absolute truth in anything, or is everything relative?
+Encoding our logical universe into the cold, calculating bytecode of computers
+forces us to deal with these questions one way or another.
+And, as we'll soon discuss,
+truth is indeed stranger than fiction.
 
-Once again, encoding our logical universe into the cold, calculating bytecode of computers forces us to deal with these questions one way or another. And as you'll see from our discussion of boolean types in Objective-C and its kin, truth is indeed stranger than fiction.
+We've talked before about the
+[philosophical and technical concerns of nothingness in programming](/nil/).
+This week,
+our attention turns to another fundamental matter:
+_Boolean types in Objective-C_.
 
----
 
-Objective-C defines `BOOL` to encode truth value. It is a `typedef` of a `signed char`, with the macros `YES` and `NO` to represent true and false, respectively.
+* * *
 
-Boolean values are used in conditionals, such as `if` or `while` statements, to conditionally perform logic or repeat execution. When evaluating a conditional statement, the value `0` is considered "false", while any other value is considered "true". Because `NULL` and `nil` are defined as `0`, conditional statements on these nonexistent values are also evaluated as "false".
+In `C`,
+statements like `if` and `while`
+evaluate a conditional expression to determine
+which code to execute next.
+A value of `0` is considered "false"
+while any other value is considered "true".
 
-**In Objective-C, use the `BOOL` type for parameters, properties, and instance variables dealing with truth values. When assigning literal values, use the `YES` and `NO` macros.**
+Objective-C defines the `BOOL` type to encode truth values.
+Altogether,
+`BOOL` comprises a type definition (`typedef signed char BOOL`)
+and the macros `YES` and `NO`,
+which represent true and false,
+respectively.
+By convention,
+we use the `BOOL` type for Boolean
+parameters,
+properties, and
+instance variables
+and use `YES` and `NO`
+when representing literal Boolean values.
+
+{% info %}
+
+Because `NULL` and `nil` zero values,
+they evaluate to "false" in conditional expressions.
+
+{% endinfo %}
 
 ## The Wrong Answer to the Wrong Question
 
-Novice programmers often include an equality operator when evaluating conditionals:
+Novice programmers often include an equality operator in conditional expressions:
 
 ```objc
 if ([a isEqual:b] == YES) {
@@ -32,7 +71,11 @@ if ([a isEqual:b] == YES) {
 }
 ```
 
-Not only is this unnecessary, but depending on the left-hand value, it may also cause unexpected results, as described in the [Big Nerd Ranch blog post, "BOOL's Sharp Edges"](https://www.bignerdranch.com/blog/bools-sharp-corners/):
+Not only is this unnecessary,
+but depending on the left-hand value can cause unexpected results,
+as demonstrated by Mark Dalrymple in
+[this blog post](https://www.bignerdranch.com/blog/bools-sharp-corners/)
+with the following example:
 
 ```objc
 static BOOL different (int a, int b) {
@@ -40,9 +83,11 @@ static BOOL different (int a, int b) {
 }
 ```
 
-An overly clever C programmer might take some satisfaction in the simplicity of this approach: indeed, two integers are equal if and only if their difference is `0`.
-
-However, because of the reality of `BOOL` being `typedef`'d as a `signed char`, this will not behave as expected:
+A clever programmer might take some satisfaction in this approach.
+Indeed, two integers are equal if and only if their difference is `0`.
+However,
+because `BOOL` is `typedef`'d as a `signed char`,
+this implementation doesn't behave as expected:
 
 ```objc
 if (different(11, 10) == YES) {
@@ -50,55 +95,61 @@ if (different(11, 10) == YES) {
 } else {
   printf ("11 == 10\n");
 }
+// Prints "11 != 10"
 
 if (different(10, 11) == YES) {
   printf ("10 != 11\n");
 } else {
   printf ("10 == 11\n");
 }
+// Prints "10 == 11"
 
 if (different(512, 256) == YES) {
   printf ("512 != 256\n");
 } else {
   printf ("512 == 256\n");
 }
+// Prints "512 == 256"
 ```
 
-This evaluates to:
+[This might be acceptable for JavaScript](https://www.destroyallsoftware.com/talks/wat),
+but Objective-C doesn't suffer fools gladly.
 
-```objc
-11 != 10
-10 == 11
-512 == 256
-```
-
-Now, [this might be acceptable for JavaScript](https://www.destroyallsoftware.com/talks/wat), but Objective-C don't suffer fools gladly.
-
-Deriving truth value directly from an arithmetic operation is never a good idea. Like the sentence ["Colorless green ideas sleep furiously"](https://en.wikipedia.org/wiki/Colorless_green_ideas_sleep_furiously), it may be grammatical (after all, `BOOL` is a `signed char` like any other, so it _could_ be treated as a number), but it doesn't make sense semantically. Instead, use the result of the `==` operator, or cast values into booleans with the `!` (or `!!`) operator.
+Deriving truth value directly from an arithmetic operation is never a good idea.
+Like the sentence
+["Colorless green ideas sleep furiously"](https://en.wikipedia.org/wiki/Colorless_green_ideas_sleep_furiously),
+it may be grammatical but it doesn't make any sense.
+Instead,
+use the result of the `==` operator
+or cast values into booleans with the `!` (or `!!`) operator.
 
 ## The Truth About `NSNumber` and `BOOL`
 
-Pop quiz: what is the output of the following expression?
+**Pop Quiz**: What is the output of the following expression?
 
 ```objc
 NSLog(@"%@", [@(YES) class]);
 ```
 
-The answer:
+**Answer**: `__NSCFBoolean`
 
-    __NSCFBoolean
+_Wait, what?_
 
-Wait, what?
+All this time,
+we've been led to believe that `NSNumber`
+[boxes](/nsvalue/) primitives into an object representation.
+Any other integer- or floating-point-derived `NSNumber` object
+shows its class to be `__NSCFNumber`.
+_So what gives?_
 
-All this time, we've been led to believe that `NSNumber` [boxes](https://nshipster.com/nsvalue/) primitives into an object representation. Any other integer- or float-derived `NSNumber` object shows its class to be `__NSCFNumber`. What gives?
-
-`NSCFBoolean` is a private class in the `NSNumber` [class cluster](https://nshipster.com/nsorderedset/). It is a bridge to the [`CFBooleanRef` type](https://developer.apple.com/library/mac/#documentation/CoreFoundation/Reference/CFBooleanRef/Reference/reference.html), which is used to wrap boolean values for Core Foundation property lists and collections. `CFBoolean` defines the constants `kCFBooleanTrue` and `kCFBooleanFalse`. Because `CFNumberRef` and `CFBooleanRef` are different types in Core Foundation, it makes sense that they are represented by different bridging classes in `NSNumber`.
-
-For most people, boolean values and boxed objects "just work", and don't really care what goes into making the sausage. But here at NSHipster, we're all about sausages.
-
----
-
-So, to recap, here is a table of all of the truth types and values in Objective-C:
+`NSCFBoolean` is a private class in the `NSNumber`
+[class cluster](/nsorderedset/).
+It's a bridge to the
+[`CFBooleanRef` type](https://developer.apple.com/library/mac/#documentation/CoreFoundation/Reference/CFBooleanRef/Reference/reference.html),
+which is used to wrap boolean values for Core Foundation property lists and collections.
+`CFBoolean` defines the constants `kCFBooleanTrue` and `kCFBooleanFalse`.
+Because `CFNumberRef` and `CFBooleanRef` are different types in Core Foundation,
+it makes sense that they are represented by different bridging classes in `NSNumber`.
 
 <table>
   <thead>
@@ -148,3 +199,12 @@ So, to recap, here is a table of all of the truth types and values in Objective-
     </tr>
   </tbody>
 </table>
+
+* * *
+
+For most people,
+Boolean values and boxed objects "just work".
+They don't really care what goes into making the sausage.
+But here at NSHipster, we're all about sausages.
+That's the honest truth.
+
