Add line break in block quote

--- a/2012-09-03-locale.md
+++ b/2012-09-03-locale.md
@@ -18,7 +18,7 @@ status:
   reviewed: November 28, 2018
 ---
 
-> “You take delight not in a city's seven or seventy wonders,
+> “You take delight not in a city's seven or seventy wonders, \\
 > but in the answer it gives to a question of yours.”
 > <cite>Italo Calvino, <em>Invisible Cities</em></cite>
 
