Convert bullet list to definition list

--- a/2012-09-03-locale.md
+++ b/2012-09-03-locale.md
@@ -144,21 +144,33 @@ being passed into a property here and a method there.
 But if you give it a chance,
 it can tell you more about a place than you ever knew there was to know:
 
-- Language and Script 
-  (`languageCode`, `scriptCode`, `exemplarCharacterSet`)
-- Region 
-  (`regionCode`)
-- Collation 
-  (`collationIdentifier`, `collatorIdentifier`)
-- Calendar 
-  (`calendar`)
-- Currency 
-  (`currencyCode`, `currencySymbol`)
-- Numbers and Units 
-  (`decimalSeparator`, `usesMetricSystem`)
-- Quotation Delimiters
-  (`quotationBeginDelimiter` / `quotationEndDelimiter`,
-  `alternateQuotationBeginDelimiter` / `alternateQuotationEndDelimiter`)
+{::nomarkdown}
+
+<dl id="locale-concerns">
+<dt>Language and Script</dt> 
+<dd><code>languageCode</code>, <code>scriptCode</code>, <code>exemplarCharacterSet</code></dd>
+
+<dt>Region</dt> 
+<dd><code>regionCode</code></dd>
+
+<dt>Collation</dt> 
+<dd><code>collationIdentifier</code>, <code>collatorIdentifier</code></dd>
+
+<dt>Calendar</dt> 
+<dd><code>calendar</code></dd>
+
+<dt>Currency</dt> 
+<dd><code>currencyCode</code>, <code>currencySymbol</code></dd>
+
+<dt>Numbers and Units</dt> 
+<dd><code>decimalSeparator</code>, <code>usesMetricSystem</code></dd>
+
+<dt>Quotation Delimiters</dt>
+<dd><code>quotationBeginDelimiter</code> / <code>quotationEndDelimiter</code>,
+<code>alternateQuotationBeginDelimiter</code> / <code>alternateQuotationEndDelimiter</code></dd>
+</dl>
+
+{:/}
 
 While this all may seem like fairly esoteric stuff,
 you'd be surprised by how many opportunities this kind of information unlocks
