Remove redundant quotation marks

--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -149,7 +149,7 @@ migrate to an alternative solution.
 But you might not feel so appreciated if you have
 `CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS` enabled in your project.
 Rather than being praised for your consideration,
-you'd be admonished for <q>"implementing a deprecated class"</q>.
+you'd be admonished for <q>implementing a deprecated class</q>.
 
 One way to silence the compiler would be to
 disable the warnings by setting `-Wno-deprecated-implementations`.
