Amend VSCode article
Thanks, @DonnyWals

--- a/2018-11-19-vscode.md
+++ b/2018-11-19-vscode.md
@@ -134,17 +134,15 @@ $ npm --version
 
 ## Step 4: Build and Install SourceKit-LSP Extension for Visual Studio Code
 
-Now that you have the Swift language server available,
-the final step is to build and install the extension
-that allows Visual Studio Code to communicate with it.
-
-From the `sourcekit-lsp` directory in the previous step,
-navigate to the `Editors/vscode` directory,
-use `npm` to build the extension
+From the command line,
+clone the [sourcekit-lsp repository](https://github.com/apple/sourcekit-lsp)
+and navigate to `Editors/vscode` in the resulting directory.
+Use `npm` to build the extension
 and then use the `code` command to install it:
 
 ```terminal
-$ cd Editors/vscode/
+$ git clone https://github.com/apple/sourcekit-lsp.git
+$ cd sourcekit-lsp/Editors/vscode/
 $ npm run createDevPackage
 $ code --install-extension out/sourcekit-lsp-vscode-dev.vsix
 ```
