Code voice -> dfn

--- a/2020-02-12-callable.md
+++ b/2020-02-12-callable.md
@@ -372,7 +372,7 @@ func assert(_ condition: @autoclosure () -> Bool,
 And yet,
 despite all of this flexibility for accepting arguments,
 most functions you'll encounter operate on an _implicit_ `self` argument.
-These functions are called `methods`.
+These functions are called <dfn>methods</dfn>.
 
 ### Methods
 
