--- a/2020-02-12-callable.md
+++ b/2020-02-12-callable.md
@@ -372,7 +372,7 @@ func assert(_ condition: @autoclosure () -> Bool,
 And yet,
 despite all of this flexibility for accepting arguments,
 most functions you'll encounter operate on an _implicit_ `self` argument.
-These functions are called <dfn>methods</dfn>.
+These functions are called methods.
 
 ### Methods
 
@@ -655,7 +655,14 @@ check out the original Swift Evolution proposals:
 
 * * *
 
-_Speaking of <del>Ruby</del><ins>Python</ins>..._
+There's much more to talk about with
+`@dynamicMemberLookup`, `@dynamicCallable`, and `callAsFunction`,
+and we look forward to covering them all in more detail
+in future articles.
+
+* * *
+
+_But speaking of <del>Ruby</del><ins>Python</ins>..._
 
 ## Swift ⨯ ___________________
 
