Correct ordering of build setting inheritance
Thanks, @dirtyhenry

Resolves #658

--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -107,10 +107,10 @@ Xcode assigns inherited values in the following order
 (from lowest to highest precedence):
 
 - Platform Defaults
+- Xcode Project xcconfig File
 - Xcode Project File Build Settings
-- xcconfig File for the Xcode Project
-- Active Target Build Settings
-- xcconfig File for the Active Target
+- Target xcconfig File
+- Target Build Settings
 
 {% info %}
 Spaces are used to delimit items in string and path lists.
