Add comment about .xcconfig files appearing in IPA archives
Thanks, @techinpark

Related to #663

--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -226,13 +226,22 @@ for its associated targets.
     <img src="{% asset xcconfig-project-configurations--light.png @path %}" alt="Xcode project configuration">
 </picture>
 
----
+{% info %}
+
+Build configuration files shouldn't included in any of your project's targets.
+If you find any `.xcconfig` files showing up in your app's `.ipa` archive,
+make sure that they aren't a member of any targets
+and don't appear in any "Copy Bundle Resources" build phases.
+
+{% endinfo %}
+
+* * *
 
 Now that we've covered the basics of using Xcode build configuration files
 let's look at a couple of examples of how you can use them
 to manage development, stage, and production environments.
 
----
+* * *
 
 ## Customizing App Name and Icon for Internal Builds
 
