Update xcconfig article with link to secret management article
Related to #636

--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -283,11 +283,9 @@ with build settings like `DEBUG`.
 import Foundation
 
 #if DEBUG
-let apiBaseURL = URL(string: "https://api.example.dev")!
-let apiKey = "9e053b0285394378cf3259ed86cd7504"
+let apiBaseURL = URL(string: "https://api.staging.example.com")!
 #else
 let apiBaseURL = URL(string: "https://api.example.com")!
-let apiKey = "4571047960318d233d64028363dfa771"
 #endif
 ```
 
@@ -295,24 +293,22 @@ This gets the job done,
 but runs afoul of the canon of code / configuration separation.
 
 An alternative approach takes these environment-specific values
-and puts them where they belong ---
+and puts them where they belong —
 into `xcconfig` files.
 
 ```
 // Development.xcconfig
-API_BASE_URL = api.example.dev
-API_KEY = 9e053b0285394378cf3259ed86cd7504
+API_BASE_URL = api.staging.example.com
 
----
+//////////////////////////////////////////
 
 // Production.xcconfig
 API_BASE_URL = api.example.com
-API_KEY = 4571047960318d233d64028363dfa771
 ```
 
-{% error %}
+{% warning %}
 
-Unfortunately, `xcconfig` files treat the sequence
+`xcconfig` files treat the sequence
 `//` as a comment delimiter,
 regardless of whether it's enclosed in quotation marks.
 If you try to escape with backslashes `\/\/`,
@@ -324,7 +320,7 @@ If you'd rather not work around this unfortunate behavior,
 you can always omit the scheme and prepend `https://` in code.
 _(You are using https... right?)_
 
-{% enderror %}
+{% endwarning %}
 
 However,
 to pull these values programmatically,
@@ -339,7 +335,7 @@ When you run the compiled app,
 none of that surrounding context is available.
 _(And thank goodness for that!)_
 
-But wait a sec ---
+But wait a sec —
 don't you remember seeing some of those build settings before
 in one of those other tabs?
 Info, was it?
@@ -352,7 +348,7 @@ that `Info.plist` file is compiled
 according to the build settings provided
 and copied into the resulting app [bundle](/bundles-and-packages/).
 Therefore,
-by adding references to `$(API_BASE_URL)` and `$(API_KEY)`,
+by adding references to `$(API_BASE_URL)`,
 you can access the values for those settings
 through the `infoDictionary` property of Foundation's `Bundle` API.
 _Neat!_
@@ -394,55 +390,29 @@ enum API {
     static var baseURL: URL {
         return URL(string: "https://" + try! Configuration.value(for: "API_BASE_URL"))!
     }
-
-    static var key: String {
-        return try! Configuration.value(for: "API_KEY")
-    }
 }
 ```
 
 When viewed from the call site,
 we find that this approach harmonizes beautifully
-with our best practices ---
+with our best practices —
 not a single hard-coded constant in sight!
 
 ```swift
 let url = URL(string: path, relativeTo: API.baseURL)!
 var request = URLRequest(url: url)
 request.httpMethod = method
-request.addValue(API.key, forHTTPHeaderField: "X-API-KEY")
 ```
 
-{% warning %}
+{% error %}
 
-Don't commit secrets to source code.
-Instead,
-store them securely in a password manager or the like.
+Don't use `xcconfig` files to store secrets like API keys or other credentials
+For more information,
+please refer to our article about [secret mangement on iOS](/secrets/).
 
-To prevent secrets from leaking onto GitHub,
-add the following to your `.gitignore` file
-(as appropriate):
+{% enderror %}
 
-```
-# .gitignore
-Development.xcconfig
-Staging.xcconfig
-Production.xcconfig
-```
-
-In place of those files,
-some developers like to have placeholder files
-(e.g. `Development.sample.xcconfig`)
-with all of the expected keys.
-When checking out the repository,
-the developer copies this file to the non-placeholder location
-and fills it out accordingly.
-
-{% endwarning %}
-
----
-
----
+* * *
 
 Xcode projects are monolithic, fragile, and opaque.
 They're a source of friction for collaboration among team members
