Fix API baseURL example code
Resolves #647

--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -388,7 +388,7 @@ enum Configuration {
 
 enum API {
     static var baseURL: URL {
-        return URL(string: "https://" + try! Configuration.value(for: "API_BASE_URL"))!
+        return try! URL(string: "https://" + try! Configuration.value(for: "API_BASE_URL"))!
     }
 }
 ```
