Update for Xcode 11.4

--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -8,7 +8,9 @@ excerpt: >-
   Learn how you can use `xcconfig` files 
   to make your Xcode projects more compact, comprehensible, and powerful.
 status:
-  swift: 5.0
+  swift: 5.2
+revisions:
+  2019-02-27: Updated for Xcode 11.4
 ---
 
 Software development best practices
@@ -135,6 +137,17 @@ or inline to build up new values dynamically.
 ```
 OBJROOT = $(SYMROOT)
 CONFIGURATION_BUILD_DIR = $(BUILD_DIR)/$(CONFIGURATION)-$(PLATFORM_NAME)
+```
+
+### Setting Fallback Values for Referenced Build Settings
+
+In Xcode 11.4 and later,
+you can use the `default` evaluation operator
+to specify a fallback value to use
+if the referenced build setting evaluates as empty.
+
+```
+$(<#BUILD_SETTING_NAME#>:default=<#fallback value#>)
 ```
 
 ### Conditionalizing
