Add link to xcodebuildsettings.com

--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -44,7 +44,15 @@ we'll show you how you can use text-based `xcconfig` files
 to externalize build settings from Xcode
 to make your projects more compact, comprehensible, and powerful.
 
----
+{% info %}
+
+Check out [XcodeBuildSettings.com](https://xcodebuildsettings.com)
+for a complete reference of every build setting
+supported for the latest version of Xcode.
+
+{% endinfo %}
+
+* * *
 
 [Xcode build configuration files](https://help.apple.com/xcode/mac/8.3/#/dev745c5c974),
 more commonly known by their `xcconfig` file extension,
